--- a/index.html
+++ b/index.html
@@ -317,11 +317,6 @@
                     <div class="year-marker"></div>
                     <div class="year-label">2025</div>
                     <div class="achievements-list">
-                        <div class="achievement-item certification" style="border: 2px solid var(--accent); box-shadow: 0 0 20px rgba(57, 255, 20, 0.3);">
-                            <span class="achievement-type-tag hackathon">CURRENT</span>
-                            <div class="achievement-title" style="color: var(--accent);">Spring Internship @ FOX Corporation</div>
-                            <div class="achievement-venue">Latest Achievement Unlocked!</div>
-                        </div>
                         <div class="achievement-item hackathon">
                             <span class="achievement-type-tag hackathon">1st Place</span>
                             <div class="achievement-title">DevHacks Hackathon</div>
@@ -355,6 +350,20 @@
                         <button class="year-load-more" data-year="2025">+ 3 More</button>
                     </div>
                 </div>
+
+
+                <!-- 2026 -->
+                <div class="year-section" data-year="2026">
+                    <div class="year-marker"></div>
+                    <div class="year-label">2026</div>
+                    <div class="achievements-list">
+                        <div class="achievement-item certification" style="border: 2px solid var(--accent); box-shadow: 0 0 20px rgba(57, 255, 20, 0.3);">
+                            <span class="achievement-type-tag hackathon">CURRENT</span>
+                            <div class="achievement-title" style="color: var(--accent);">Spring Internship @ FOX Corporation</div>
+                            <div class="achievement-venue">Latest Achievement Unlocked!</div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -370,10 +379,19 @@
                 <div class="experience-dot"></div>
                 <div class="experience-card upcoming">
                     <div class="upcoming-badge"><i class="fas fa-star"></i> UPCOMING</div>
-                    <div class="experience-date">[ FEB 2026 ]</div>
+                    <div class="experience-date">[ FEB 2026 - Apr 2026 ]</div>
                     <div class="experience-title">FOX Intern</div>
                     <div class="experience-company">FOX Corporation</div>
-                    <div class="experience-description">Spring 2026 internship focusing on software engineering and development at one of the world's leading media companies.</div>
+                    <div class="experience-description">Optimizing IP Address Management (IPAM) and Data Center Infrastructure Management (DCIM) tools by deploying automation scripts. Working in a high-paced environment supporting state-of-the-art broadcast solutions deployed both on-prem and in AWS cloud.</div>
+                </div>
+            </div>
+            <div class="experience-item">
+                <div class="experience-dot"></div>
+                <div class="experience-card">
+                    <div class="experience-date">[ OCT 2025 - FEB 2026 ]</div>
+                    <div class="experience-title">Research Aide (Part-time)</div>
+                    <div class="experience-company">Arizona State University</div>
+                    <div class="experience-description">Developed ML and Deep Learning models for groundwater depth prediction integrated with hash-encoding technique from NVIDIA's tiny-cuda-nn library. Implemented CUDA processing pipelines to accelerate model training and inference for geospatial data analysis.</div>
                 </div>
             </div>
             <div class="experience-item">
@@ -431,92 +449,96 @@
                 <div class="skills-grid">
                     <div class="skill-item highlight">Python</div>
                     <div class="skill-item highlight">JavaScript</div>
-                    <div class="skill-item">HTML</div>
-                    <div class="skill-item">CSS</div>
-                    <div class="skill-item highlight">Java</div>
-                    <div class="skill-item">SQL</div>
-                    <div class="skill-item">C</div>
+                    <div class="skill-item highlight">TypeScript</div>
+                    <div class="skill-item">Java</div>
                     <div class="skill-item">C++</div>
-                    <div class="skill-item">Dart</div>
-                    <div class="skill-item">jQuery</div>
-                    <div class="skill-item">PHP</div>
-                    <div class="skill-item">C#</div>
+                    <div class="skill-item">SQL</div>
+                    <div class="skill-item">HTML/CSS</div>
                 </div>
             </div>
 
-            <!-- Technologies -->
+            <!-- AI & Machine Learning -->
             <div class="skill-category">
                 <div class="skill-category-header">
-                    <div class="skill-category-icon"><i class="fas fa-microchip"></i></div>
-                    <div class="skill-category-title">Technologies</div>
+                    <div class="skill-category-icon"><i class="fas fa-brain"></i></div>
+                    <div class="skill-category-title">AI & Machine Learning</div>
                 </div>
                 <div class="skills-grid">
-                    <div class="skill-item highlight">Machine Learning</div>
-                    <div class="skill-item highlight">Full Stack Web Development</div>
-                    <div class="skill-item">App Development</div>
-                    <div class="skill-item">Git</div>
-                    <div class="skill-item">GitHub</div>
-                    <div class="skill-item">Docker</div>
+                    <div class="skill-item highlight">Deep Learning</div>
                     <div class="skill-item highlight">NLP</div>
-                    <div class="skill-item">Ollama</div>
-                    <div class="skill-item highlight">LLM</div>
-                    <div class="skill-item">MCP</div>
+                    <div class="skill-item highlight">LLMs</div>
+                    <div class="skill-item highlight">AI Agents</div>
+                    <div class="skill-item highlight">Computer Vision</div>
+                    <div class="skill-item">CUDA</div>
+                    <div class="skill-item">Hugging Face</div>
+                    <div class="skill-item">Scikit-learn</div>
                 </div>
             </div>
 
-            <!-- Frameworks -->
+            <!-- Frameworks & Libraries -->
             <div class="skill-category">
                 <div class="skill-category-header">
                     <div class="skill-category-icon"><i class="fas fa-layer-group"></i></div>
-                    <div class="skill-category-title">Frameworks</div>
-                </div>
-                <div class="skills-grid">
-                    <div class="skill-item highlight">React.js</div>
-                    <div class="skill-item highlight">Node.js</div>
-                    <div class="skill-item">TailwindCSS</div>
-                    <div class="skill-item">Flask</div>
-                    <div class="skill-item">Express.js</div>
-                    <div class="skill-item highlight">FastAPI</div>
-                    <div class="skill-item">Redux</div>
-                    <div class="skill-item">RESTful APIs</div>
-                    <div class="skill-item">Flutter</div>
-                    <div class="skill-item">Angular.js</div>
-                    <div class="skill-item">Copilot Studio</div>
-                </div>
-            </div>
-
-            <!-- Tools and Databases -->
-            <div class="skill-category">
-                <div class="skill-category-header">
-                    <div class="skill-category-icon"><i class="fas fa-database"></i></div>
-                    <div class="skill-category-title">Tools & Databases</div>
+                    <div class="skill-category-title">Frameworks & Libraries</div>
                 </div>
                 <div class="skills-grid">
                     <div class="skill-item highlight">PyTorch</div>
-                    <div class="skill-item">Postgres</div>
-                    <div class="skill-item">MySQL</div>
-                    <div class="skill-item">Firebase</div>
-                    <div class="skill-item highlight">AWS & Lambda</div>
-                    <div class="skill-item">Atlassian</div>
                     <div class="skill-item highlight">TensorFlow</div>
-                    <div class="skill-item">SVN</div>
-                    <div class="skill-item">Kaggle</div>
+                    <div class="skill-item highlight">React.js</div>
+                    <div class="skill-item highlight">Node.js</div>
+                    <div class="skill-item">FastAPI</div>
+                    <div class="skill-item">Next.js</div>
+                    <div class="skill-item">Flask</div>
+                    <div class="skill-item">Express.js</div>
+                    <div class="skill-item">TailwindCSS</div>
+                </div>
+            </div>
+
+            <!-- Cloud & DevOps -->
+            <div class="skill-category">
+                <div class="skill-category-header">
+                    <div class="skill-category-icon"><i class="fas fa-cloud"></i></div>
+                    <div class="skill-category-title">Cloud & DevOps</div>
+                </div>
+                <div class="skills-grid">
+                    <div class="skill-item highlight">AWS Lambda</div>
+                    <div class="skill-item highlight">EC2</div>
+                    <div class="skill-item">AWS IOT-Greengrass</div>
+                    <div class="skill-item">Docker</div>
+                    <div class="skill-item">Kubernetes</div>
+                    <div class="skill-item">GitHub Actions</div>
                     <div class="skill-item">Linux</div>
                 </div>
             </div>
 
-            <!-- Soft Skills -->
+            <!-- Databases -->
             <div class="skill-category">
                 <div class="skill-category-header">
-                    <div class="skill-category-icon"><i class="fas fa-users"></i></div>
-                    <div class="skill-category-title">Soft Skills</div>
+                    <div class="skill-category-icon"><i class="fas fa-database"></i></div>
+                    <div class="skill-category-title">Databases</div>
                 </div>
                 <div class="skills-grid">
-                    <div class="skill-item highlight">Problem Solving</div>
-                    <div class="skill-item highlight">Leadership</div>
-                    <div class="skill-item highlight">Team Collaboration</div>
-                    <div class="skill-item">Interpersonal Communication</div>
-                    <div class="skill-item">Time Management</div>
+                    <div class="skill-item highlight">PostgreSQL</div>
+                    <div class="skill-item highlight">ChromaDB</div>
+                    <div class="skill-item highlight">AWS S3</div>
+                    <div class="skill-item">MongoDB</div>
+                    <div class="skill-item">Firebase</div>
+                    <div class="skill-item">MySQL</div>
+                </div>
+            </div>
+
+            <!-- Methodologies & Practices -->
+            <div class="skill-category">
+                <div class="skill-category-header">
+                    <div class="skill-category-icon"><i class="fas fa-sitemap"></i></div>
+                    <div class="skill-category-title">Methodologies & Practices</div>
+                </div>
+                <div class="skills-grid">
+                    <div class="skill-item highlight">System Design</div>
+                    <div class="skill-item highlight">Prompt Engineering</div>
+                    <div class="skill-item highlight">RAG Architecture</div>
+                    <div class="skill-item">Agile/Scrum</div>
+                    <div class="skill-item">Technical Writing</div>
                 </div>
             </div>
         </div>
@@ -788,7 +810,7 @@
     <footer>
         <div class="footer-content">
             <div class="footer-logo">// SANYAM_JAIN</div>
-            <div class="footer-text">[ MISSION STATUS: SEEKING FULL TIME ] | &copy; 2025</div>
+            <div class="footer-text">[ MISSION STATUS: SEEKING FULL TIME ] | &copy; 2026</div>
             <div class="footer-social">
                 <a href="mailto:sanyamjain3003@gmail.com" class="social-link" target="_blank" title="Email">
                     <i class="fas fa-envelope"></i>
