--- a/index.html
+++ b/index.html
@@ -33,11 +33,16 @@
             <li><a href="#certifications">Certs</a></li>
             <li><a href="#projects">Projects</a></li>
         </ul>
-        <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Toggle menu">
+        <div class="nav-right">
+            <button class="theme-toggle" id="theme-toggle" aria-label="Toggle theme">
+                <i class="fas fa-sun" id="theme-icon"></i>
+            </button>
+            <button class="mobile-menu-btn" id="mobile-menu-btn" aria-label="Toggle menu">
             <span></span>
             <span></span>
             <span></span>
         </button>
+        </div>
     </nav>
 
     <!-- Hero Section -->
