--- a/index.html
+++ b/index.html
@@ -385,7 +385,7 @@
                 <div class="experience-card upcoming">
                     <div class="upcoming-badge"><i class="fas fa-star"></i> UPCOMING</div>
                     <div class="experience-date">[ FEB 2026 - Apr 2026 ]</div>
-                    <div class="experience-title">FOX Intern</div>
+                    <div class="experience-title">Software Engineering Intern</div>
                     <div class="experience-company">FOX Corporation</div>
                     <div class="experience-description">Optimizing IP Address Management (IPAM) and Data Center Infrastructure Management (DCIM) tools by deploying automation scripts. Working in a high-paced environment supporting state-of-the-art broadcast solutions deployed both on-prem and in AWS cloud.</div>
                 </div>
